{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 19,
  "lineage": "f94ad33c-477d-973f-f4b1-e5e22d8134d6",
  "resources": [
    {
      "module": "module.main-modules.module.network-module",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-20T12:45:44.114-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/abdelaziz-gke/global/firewalls/http",
            "log_config": [],
            "name": "http",
            "network": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/global/networks/gke-vpc",
            "priority": 1000,
            "project": "abdelaziz-gke",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/global/firewalls/http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-modules.module.network-module.google_compute_network.gke-vpc",
            "module.main-modules.module.network-module.google_project_service.compute",
            "module.main-modules.module.network-module.google_project_service.container"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.network-module",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-20T12:45:43.973-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/abdelaziz-gke/global/firewalls/ssh",
            "log_config": [],
            "name": "ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/global/networks/gke-vpc",
            "priority": 1000,
            "project": "abdelaziz-gke",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/global/firewalls/ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-modules.module.network-module.google_compute_network.gke-vpc",
            "module.main-modules.module.network-module.google_project_service.compute",
            "module.main-modules.module.network-module.google_project_service.container"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.network-module",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "gke-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/abdelaziz-gke/global/networks/gke-vpc",
            "mtu": 0,
            "name": "gke-vpc",
            "project": "abdelaziz-gke",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/global/networks/gke-vpc"
          },
          "dependencies": [
            "module.main-modules.module.network-module.google_project_service.compute",
            "module.main-modules.module.network-module.google_project_service.container"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.network-module",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "gke-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-02-20T12:46:04.352-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/abdelaziz-gke/regions/asia-east1/routers/gke-router",
            "name": "gke-router",
            "network": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/global/networks/gke-vpc",
            "project": "abdelaziz-gke",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/regions/asia-east1/routers/gke-router"
          },
          "dependencies": [
            "module.main-modules.module.network-module.google_compute_network.gke-vpc",
            "module.main-modules.module.network-module.google_project_service.compute",
            "module.main-modules.module.network-module.google_project_service.container",
            "module.main-modules.module.subnets-module.google_compute_subnetwork.gke-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.network-module",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "gke-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "abdelaziz-gke/asia-east1/gke-router/gke-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "gke-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "abdelaziz-gke",
            "region": "asia-east1",
            "router": "gke-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.main-modules.module.network-module.google_compute_network.gke-vpc",
            "module.main-modules.module.network-module.google_compute_router.gke-router",
            "module.main-modules.module.network-module.google_project_service.compute",
            "module.main-modules.module.network-module.google_project_service.container",
            "module.main-modules.module.subnets-module.google_compute_subnetwork.gke-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.subnets-module",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "gke-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "management",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-20T12:45:47.051-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/abdelaziz-gke/regions/asia-east1/subnetworks/management",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "management",
            "network": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/global/networks/gke-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "abdelaziz-gke",
            "purpose": "PRIVATE",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/regions/asia-east1/subnetworks/management",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.main-modules.module.network-module.google_compute_network.gke-vpc",
            "module.main-modules.module.network-module.google_project_service.compute",
            "module.main-modules.module.network-module.google_project_service.container"
          ]
        },
        {
          "index_key": "restricted",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-20T12:45:46.828-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/abdelaziz-gke/regions/asia-east1/subnetworks/restricted",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "restricted",
            "network": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/global/networks/gke-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "abdelaziz-gke",
            "purpose": "PRIVATE",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/regions/asia-east1/subnetworks/restricted",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.main-modules.module.network-module.google_compute_network.gke-vpc",
            "module.main-modules.module.network-module.google_project_service.compute",
            "module.main-modules.module.network-module.google_project_service.container"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.vm-module",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gke-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230206",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/zones/asia-east1-a/disks/instance-gke-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/abdelaziz-gke/zones/asia-east1-a/instances/instance-gke-1",
            "instance_id": "6315163393722311394",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "6SBxuXvUsyQ=",
            "name": "instance-gke-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/global/networks/gke-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/regions/asia-east1/subnetworks/management",
                "subnetwork_project": "abdelaziz-gke"
              }
            ],
            "project": "abdelaziz-gke",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelaziz-gke/zones/asia-east1-a/instances/instance-gke-1",
            "service_account": [
              {
                "email": "custom-compute-sa@abdelaziz-gke.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-east1-a"
          },
          "dependencies": [
            "module.main-modules.module.network-module.google_compute_network.gke-vpc",
            "module.main-modules.module.network-module.google_project_service.compute",
            "module.main-modules.module.network-module.google_project_service.container",
            "module.main-modules.module.sa-module.google_service_account.custom_compute_sa",
            "module.main-modules.module.subnets-module.google_compute_subnetwork.gke-subnet"
          ]
        }
      ]
    }
  ]
}